Bundle a new jar including dependencies and test files